# ai-genai-usecases-insurance-policy-advisor

./: .env.example  .gitignore  Dockerfile  Dockerfile.streamlit  README.md  docker-compose.yml  pyproject.toml
config/: logging.yaml  settings.yaml
data/sample_policies/: auto_policy.txt  health_policy.txt  home_policy.txt
scripts/: ingest_documents.py
src/: __init__.py  main.py
src/agent/: __init__.py  chat_agent.py  llm_client.py  prompt_templates.py
src/api/: __init__.py  middleware.py
src/api/models/: __init__.py  schemas.py
src/api/routes/: __init__.py  chat.py  health.py  ingest.py
src/config/: __init__.py  settings.py
src/graph_rag/: __init__.py  entity_extractor.py  graph_builder.py  graph_retriever.py  graph_store.py
src/ingestion/: __init__.py  document_loader.py  pipeline.py  text_splitter.py
src/rag/: __init__.py  embeddings.py  retriever.py  vector_store.py
src/utils/: __init__.py  logger.py
tests/: __init__.py  conftest.py
tests/test_agent/: __init__.py  test_chat_agent.py
tests/test_api/: __init__.py  test_routes.py
tests/test_graph_rag/: __init__.py  test_entity_extractor.py  test_graph_builder.py  test_graph_retriever.py
tests/test_ingestion/: __init__.py  test_document_loader.py  test_text_splitter.py
tests/test_rag/: __init__.py  test_embeddings.py  test_retriever.py  test_vector_store.py
ui/: streamlit_app.py
