[tool.poetry]
name = "insurance-policy-advisor"
version = "0.1.0"
description = "A RAG and GraphRAG system for insurance policy guidance using Claude AI"
authors = ["Developer"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
anthropic = "^0.42.0"
chromadb = "^0.5.0"
sentence-transformers = "^3.3.0"
networkx = "^3.4.0"
pypdf2 = "^3.0.0"
python-docx = "^1.1.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"
pyyaml = "^6.0.0"
python-dotenv = "^1.0.0"
streamlit = "^1.40.0"
requests = "^2.32.0"
tenacity = "^9.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
httpx = "^0.28.0"
black = "^24.10.0"
ruff = "^0.8.0"
mypy = "^1.13.0"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
